force-app/main/default/objects/ConnectionManager__mdt/ConnectionManager__mdt.object-meta.xml
<CustomObject>
    <description>A way to dynamically assign environment based URL&#39;s</description>
    <label>Connection Manager</label>
    <pluralLabel>Connections Manager</pluralLabel>
</CustomObject>