force-app/main/default/objects/ConnectionManager__mdt/fields/DevEndpoint__c.field-meta.xml
<CustomField>
    <fullName>DevEndpoint__c</fullName>
    <description>Field for endpoint storage</description>
    <label>Dev Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>