force-app/main/default/objects/ConnectionManager__mdt/fields/ProdEndpoint__c.field-meta.xml
<CustomField>
    <fullName>ProdEndpoint__c</fullName>
    <label>Prod Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>