force-app/main/default/objects/ConnectionManager__mdt/fields/QaEndpoint__c.field-meta.xml
<CustomField>
    <fullName>QaEndpoint__c</fullName>
    <label>QA Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>