force-app/main/default/objects/ConnectionManager__mdt/fields/SitEndpoint__c.field-meta.xml
<CustomField>
    <fullName>SitEndpoint__c</fullName>
    <label>SIT Endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>