force-app/main/default/objects/ConnectionManager__mdt/fields/UatEndpoint__c.field-meta.xml
<CustomField>
    <fullName>UatEndpoint__c</fullName>
    <label>UAT Endpoint</label>
    <type>Url</type>
</CustomField>